<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/question_1"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto"
            android:gravity="end"
            android:text="@string/select_any_one"
            android:textSize="@dimen/_16sdp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sachin_tendulkar" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/virat_kolli" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adam_gilchirst" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jacques_kallis" />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tvNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_15sdp"
        android:fontFamily="@font/roboto_medium"
        android:padding="@dimen/_10sdp"
        android:text="@string/next"
        android:textSize="@dimen/_12sdp" />

</RelativeLayout>